--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ember-froala-editor",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "1.0.0-alpha.0",
+  "description": "Bring the Froala WYSIWYG Editor into an ember-cli project with this addon.",
+  "bugs": "https://github.com/Panman8201/ember-froala-editor/issues",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,11 +12,11 @@
     "start": "ember server",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "Panman8201/ember-froala-editor",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Ryan Panning <panman82@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
@@ -40,7 +41,15 @@
     "loader.js": "^4.0.0"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "froala",
+    "froala-editor",
+    "froala-wysiwyg",
+    "froala-wysiwyg-editor",
+    "html",
+    "text",
+    "editor",
+    "wysiwyg"
   ],
   "dependencies": {
     "ember-cli-babel": "^5.1.5"
