--- a/bower.json
+++ b/bower.json
@@ -5,5 +5,9 @@
     "ember-cli-shims": "0.1.0",
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0"
+  },
+  "devDependencies": {
+    "font-awesome": "~4.5.0",
+    "froala-wysiwyg-editor": "~2.2.1"
   }
 }
