Import froala editor files
Import the froala editor files into the tree and add options for the
ember-cli-build.js file to limit what plugins, languages, and themes
are imported.

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   ],
   "dependencies": {
     "ember-cli-babel": "^5.1.5",
+    "object-assign": "^4.0.1",
     "rsvp": "^3.2.1"
   },
   "ember-addon": {
