--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
     "ember-qunit-notifications": "0.1.0"
   },
   "devDependencies": {
+    "bootstrap": "^3.3.6",
+    "bootswatch": "^3.3.6",
     "font-awesome": "~4.5.0",
     "froala-wysiwyg-editor": "~2.2.1"
   }
