--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ember-froala-editor",
   "version": "1.0.0-alpha.0",
   "description": "Bring the Froala WYSIWYG Editor into an ember-cli project with this addon.",
+  "homepage": "http://panman8201.github.io/ember-froala-editor/",
   "bugs": "https://github.com/Panman8201/ember-froala-editor/issues",
   "directories": {
     "doc": "doc",
@@ -10,7 +11,8 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember try:testall"
+    "test": "ember try:testall",
+    "deploy": "ember github-pages:commit --message \"Deploy gh-pages from commit $(git rev-parse HEAD)\"; git push; git checkout -"
   },
   "repository": "Panman8201/ember-froala-editor",
   "engines": {
@@ -23,8 +25,10 @@
     "ember-ajax": "0.7.1",
     "ember-cli": "2.4.1",
     "ember-cli-app-version": "^1.0.0",
+    "ember-cli-bootswatch": "1.13.2",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-font-awesome": "^1.4.2",
+    "ember-cli-github-pages": "0.0.8",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-qunit": "^1.2.1",
@@ -37,6 +41,7 @@
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
     "ember-try": "^0.1.2",
+    "liquid-fire": "0.23.0",
     "loader.js": "^4.0.0"
   },
   "keywords": [
@@ -57,6 +62,7 @@
     "rsvp": "^3.2.1"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "demoURL": "http://panman8201.github.io/ember-froala-editor/"
   }
 }
