--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-froala-editor",
   "version": "1.0.0-alpha.1",
-  "description": "Bring the Froala WYSIWYG Editor into an ember-cli project with this addon.",
+  "description": "An ember-cli addon that properly wraps the Froala WYSIWYG Editor for use in Ember.js",
   "homepage": "http://panman8201.github.io/ember-froala-editor/",
   "bugs": "https://github.com/Panman8201/ember-froala-editor/issues",
   "directories": {
@@ -27,7 +27,7 @@
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-bootswatch": "1.13.2",
     "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-font-awesome": "^1.4.2",
+    "ember-cli-font-awesome": "^1.5.0",
     "ember-cli-github-pages": "0.0.8",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
