--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ember-froala-editor",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "description": "An ember-cli addon that properly wraps the Froala WYSIWYG Editor for use in Ember.js",
-  "homepage": "http://froala.github.io/ember-froala-editor/",
+  "homepage": "https://froala.com/wysiwyg-editor",
   "bugs": "https://github.com/froala/ember-froala-editor/issues",
   "directories": {
     "doc": "doc",
