Fix my e-mail address
I accidentally changed it when moving the repo over to the froala org.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     },
     {
       "name": "Ryan Panning",
-      "email": "froala@gmail.com"
+      "email": "panman82@gmail.com"
     }
   ],
   "license": "MIT",
