--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
+    "ember-string-ishtmlsafe-polyfill": "1.0.1",
     "ember-try": "^0.2.2",
     "liquid-fire": "0.23.0",
     "loader.js": "^4.0.1"
