--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
-    "ember-string-ishtmlsafe-polyfill": "1.0.1",
     "ember-try": "^0.2.2",
     "liquid-fire": "0.23.0",
     "loader.js": "^4.0.1"
@@ -79,6 +78,7 @@
   "dependencies": {
     "ember-cli-babel": "^5.1.6",
     "ember-cli-htmlbars": "^1.0.3",
+    "ember-string-ishtmlsafe-polyfill": "^1.0.1",
     "object-assign": "^4.0.1",
     "rsvp": "^3.2.1"
   },
