--- a/package.json
+++ b/package.json
@@ -57,10 +57,10 @@
     "ember-ajax": "^2.4.1",
     "ember-cli": "^2.9.1",
     "ember-cli-app-version": "^2.0.0",
-    "ember-cli-bootswatch": "1.13.2",
+    "ember-cli-bootswatch": "^1.13.2",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-font-awesome": "^1.5.0",
-    "ember-cli-github-pages": "0.0.8",
+    "ember-cli-github-pages": "^0.1.2",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^1.0.4",
@@ -73,15 +73,15 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
-    "liquid-fire": "0.23.0",
+    "liquid-fire": "0.26.4",
     "loader.js": "^4.0.10"
   },
   "dependencies": {
     "ember-cli-babel": "^5.1.7",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-string-ishtmlsafe-polyfill": "^1.0.1",
-    "object-assign": "^4.0.1",
-    "rsvp": "^3.2.1"
+    "object-assign": "^4.1.0",
+    "rsvp": "^3.3.3"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
