--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-bootswatch": "^1.13.2",
     "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-font-awesome": "^1.5.0",
     "ember-cli-github-pages": "^0.1.2",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
@@ -71,6 +70,7 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-font-awesome": "^2.2.0",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "liquid-fire": "0.26.4",
