--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
-    "ember-cli": "^2.9.1",
+    "ember-cli": "~2.9.1",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-bootswatch": "^1.13.2",
     "ember-cli-dependency-checker": "^1.3.0",
