--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,6 @@
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
     "font-awesome": "~4.7.0",
-    "froala-wysiwyg-editor": "~2.3.5"
+    "froala-wysiwyg-editor": "~2.4.0-rc.1"
   }
 }
