--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,6 @@
 {
   "name": "ember-froala-editor",
-  "dependencies": {
-    "ember": "~2.10.0",
-    "ember-cli-shims": "0.1.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
