--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ember-assign-polyfill": "^1.0.0",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-htmlbars": "^1.1.1",
+    "ember-get-config": "^0.2.0",
     "ember-string-ishtmlsafe-polyfill": "^1.0.1",
     "rsvp": "^3.3.3"
   },
