--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,6 @@
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
-    "font-awesome": "~4.7.0",
-    "froala-wysiwyg-editor": "~2.4.1"
+    "font-awesome": "~4.7.0"
   }
 }
