--- a/package.json
+++ b/package.json
@@ -54,10 +54,11 @@
     "wysiwyg"
   ],
   "dependencies": {
+    "broccoli-funnel": "^1.1.0",
+    "broccoli-merge-trees": "^1.2.1",
     "ember-assign-polyfill": "^2.0.1",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-htmlbars": "^1.1.1",
-    "ember-cli-node-assets": "^0.1.6",
     "ember-get-config": "^0.2.1",
     "ember-string-ishtmlsafe-polyfill": "^1.0.1",
     "froala-editor": "~2.4.2"
