--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ember-assign-polyfill": "^2.0.1",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-htmlbars": "^1.1.1",
+    "ember-cli-version-checker": "^1.2.0",
     "ember-get-config": "^0.2.1",
     "ember-string-ishtmlsafe-polyfill": "^1.0.1",
     "froala-editor": "~2.5.0"
