--- a/package.json
+++ b/package.json
@@ -91,6 +91,9 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
-    "demoURL": "http://froala.github.io/ember-froala-editor/"
+    "demoURL": "http://froala.github.io/ember-froala-editor/",
+    "versionCompatibility": {
+      "ember": ">=2.4.2"
+    }
   }
 }
