--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ember-froala-editor",
   "version": "2.5.0",
   "description": "An ember-cli addon that properly wraps the Froala WYSIWYG Editor for use in Ember.js",
-  "homepage": "https://froala.com/wysiwyg-editor",
+  "homepage": "https://froala.github.io/ember-froala-editor/",
   "bugs": "https://github.com/froala/ember-froala-editor/issues",
   "directories": {
     "doc": "doc",
