--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-froala-editor",
-  "version": "2.5.0",
+  "version": "2.5.1-beta.1",
   "description": "An ember-cli addon that properly wraps the Froala WYSIWYG Editor for use in Ember.js",
   "homepage": "https://froala.github.io/ember-froala-editor/",
   "bugs": "https://github.com/froala/ember-froala-editor/issues",
