--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-version-checker": "^1.2.0",
     "ember-string-ishtmlsafe-polyfill": "^1.1.0",
-    "froala-editor": "^2.6.0"
+    "froala-editor": "~2.6.1"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
