--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ env:
   - EMBER_TRY_SCENARIO=ember-2.10
   - EMBER_TRY_SCENARIO=ember-2.11
   - EMBER_TRY_SCENARIO=ember-2.12
+  - EMBER_TRY_SCENARIO=ember-2.13
   - EMBER_TRY_SCENARIO=ember-release
   - EMBER_TRY_SCENARIO=ember-beta
   - EMBER_TRY_SCENARIO=ember-canary
