--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "repository": "froala/ember-froala-editor",
   "engines": {
-    "node": ">= 4"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "contributors": [
     {
@@ -54,11 +54,11 @@
     "wysiwyg"
   ],
   "dependencies": {
-    "broccoli-funnel": "^1.1.0",
+    "broccoli-funnel": "^1.2.0",
     "broccoli-merge-trees": "^2.0.0",
     "ember-assign-polyfill": "^2.0.1",
-    "ember-cli-babel": "^6.0.0",
-    "ember-cli-htmlbars": "^1.1.1",
+    "ember-cli-babel": "^6.3.0",
+    "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-version-checker": "^2.0.0",
     "ember-string-ishtmlsafe-polyfill": "^1.1.0",
     "froala-editor": "~2.6.3"
@@ -66,24 +66,24 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "~2.13.0",
-    "ember-cli-bootswatch": "^1.13.2",
+    "ember-cli": "^2.14.0",
+    "ember-cli-bootswatch": "^1.13.4",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-eslint": "^3.0.0",
     "ember-cli-github-pages": "^0.1.2",
-    "ember-cli-htmlbars-inline-precompile": "^0.4.0",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-disable-prototype-extensions": "^1.1.0",
+    "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
-    "ember-font-awesome": "^3.0.3",
+    "ember-font-awesome": "^3.0.5",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
-    "ember-source": "~2.13.0",
-    "liquid-fire": "~0.27.1",
+    "ember-source": "~2.14.0",
+    "liquid-fire": "~0.27.3",
     "loader.js": "^4.2.3"
   },
   "ember-addon": {
