--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,9 @@ before_install:
   - npm --version
   - bower --version
 
+install:
+  - bower install
+
 script:
   # Usually, it's ok to finish the test scenario without reverting
   #  to the addon's original dependency state, skipping "cleanup".
