--- a/.travis.yml
+++ b/.travis.yml
@@ -14,25 +14,20 @@ addons:
 cache:
   directories:
     - $HOME/.npm
-    - $HOME/.cache # includes bowers cache
 
 env:
-  # we recommend new addons test the current and previous LTS
-  # as well as latest stable release (bonus points to beta/canary)
-  - EMBER_TRY_SCENARIO=ember-2.4
-  - EMBER_TRY_SCENARIO=ember-2.5
-  - EMBER_TRY_SCENARIO=ember-2.6
-  - EMBER_TRY_SCENARIO=ember-2.7
-  - EMBER_TRY_SCENARIO=ember-2.8
-  - EMBER_TRY_SCENARIO=ember-2.9
-  - EMBER_TRY_SCENARIO=ember-2.10
-  - EMBER_TRY_SCENARIO=ember-2.11
-  - EMBER_TRY_SCENARIO=ember-2.12
-  - EMBER_TRY_SCENARIO=ember-2.13
-  - EMBER_TRY_SCENARIO=ember-2.14
-  - EMBER_TRY_SCENARIO=ember-release
-  - EMBER_TRY_SCENARIO=ember-beta
-  - EMBER_TRY_SCENARIO=ember-canary
+  global:
+    # See https://git.io/vdao3 for details.
+    - JOBS=1
+  matrix:
+    # we recommend new addons test the current and previous LTS
+    # as well as latest stable release (bonus points to beta/canary)
+    - EMBER_TRY_SCENARIO=ember-lts-2.12
+    - EMBER_TRY_SCENARIO=ember-lts-2.16
+    - EMBER_TRY_SCENARIO=ember-release
+    - EMBER_TRY_SCENARIO=ember-beta
+    - EMBER_TRY_SCENARIO=ember-canary
+    - EMBER_TRY_SCENARIO=ember-default
 
 matrix:
   fast_finish: true
@@ -41,15 +36,11 @@ matrix:
 
 before_install:
   - npm config set spin false
-  - npm install -g npm@4 bower
+  - npm install -g npm@4
   - npm --version
-  - bower --version
-
-install:
-  - npm install
-  - bower install
 
 script:
+  - npm run lint:js
   # Usually, it's ok to finish the test scenario without reverting
   #  to the addon's original dependency state, skipping "cleanup".
   - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO --skip-cleanup
