--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-froala-editor",
-  "version": "2.7.5",
+  "version": "2.7.6-beta.1",
   "description": "An ember-cli addon that properly wraps the Froala WYSIWYG Editor for use in Ember.js",
   "keywords": [
     "ember-addon",
