--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "~2.18.2",
+    "ember-cli": "~3.0.0",
     "ember-cli-app-version": "^3.1.0",
     "ember-cli-bootswatch": "^2.0.0-beta.3",
     "ember-cli-dependency-checker": "^2.0.0",
@@ -76,8 +76,11 @@
     "ember-export-application-global": "^2.0.0",
     "ember-font-awesome": "^3.1.1",
     "ember-load-initializers": "^1.0.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
-    "ember-source": "~2.18.0",
+    "ember-source": "~3.0.0",
+    "ember-source-channel-url": "^1.0.1",
+    "ember-try": "^0.2.23",
     "eslint-plugin-ember": "^5.0.0",
     "eslint-plugin-node": "^5.2.1",
     "loader.js": "^4.2.3"
