--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "froala-editor": "^2.6.3"
   },
   "devDependencies": {
+    "@ember/jquery": "^0.5.2",
+    "@ember/optional-features": "^0.7.0",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^3.1.0",
     "ember-cli": "~3.4.0",
