--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,1 +1,13 @@
-{"compilerOptions":{"target":"es6","experimentalDecorators":true},"exclude":["node_modules","bower_components","tmp","vendor",".git","dist"]}
+{
+  "compilerOptions": {
+    "target":"es2018",
+    "experimentalDecorators":true
+  },
+  "exclude":[
+    ".git",
+    "dist",
+    "node_modules",
+    "tmp",
+    "vendor"
+  ]
+}
