--- a/package.json
+++ b/package.json
@@ -37,14 +37,12 @@
     "lint:js": "eslint .",
     "start": "ember serve",
     "test": "ember test",
-    "test:all": "ember try:each",
-    "deploy": "ember github-pages:commit --message \"Deploy gh-pages from commit $(git rev-parse HEAD)\"; git push; git checkout -"
+    "test:all": "ember try:each"
   },
   "dependencies": {
     "@ember/jquery": "^0.6.0",
     "ember-cli-babel": "^7.11.1",
     "ember-cli-htmlbars": "^4.0.1",
-    "ember-cli-version-checker": "^3.1.2",
     "froala-editor": "^2.9.4"
   },
   "devDependencies": {
@@ -54,11 +52,8 @@
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-cli": "~3.14.0-beta.2",
-    "ember-cli-app-version": "^3.2.0",
-    "ember-cli-bootswatch": "^2.0.2",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
-    "ember-cli-github-pages": "^0.2.1",
     "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
