--- a/package.json
+++ b/package.json
@@ -40,10 +40,8 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "@ember/jquery": "^0.6.0",
     "ember-cli-babel": "^7.11.1",
-    "ember-cli-htmlbars": "^4.0.1",
-    "froala-editor": "^2.9.4"
+    "ember-cli-htmlbars": "^4.0.1"
   },
   "devDependencies": {
     "@ember/edition-utils": "^1.1.1",
