--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   },
   "dependencies": {
     "ember-cli-babel": "^7.11.1",
-    "ember-cli-htmlbars": "^4.0.1"
+    "ember-cli-htmlbars": "^4.0.1",
+    "froala-editor": "^3.0.6"
   },
   "devDependencies": {
     "@ember/edition-utils": "^1.1.1",
@@ -58,7 +59,6 @@
     "ember-cli-uglify": "^3.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
-    "ember-font-awesome": "^3.1.1",
     "ember-load-initializers": "^2.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.5.1",
