--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
+    "@ember/render-modifiers": "^1.0.2",
     "ember-cli-babel": "^7.11.1",
     "ember-cli-htmlbars": "^4.0.1",
     "froala-editor": "^3.0.6"
