--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@ember/render-modifiers": "^1.0.2",
+    "@glimmer/component": "^1.0.0-beta.1",
     "ember-angle-bracket-invocation-polyfill": "^2.0.2",
     "ember-cli-babel": "^7.12.0",
     "ember-cli-htmlbars": "^4.0.8",
@@ -51,7 +52,6 @@
   "devDependencies": {
     "@ember/edition-utils": "^1.1.1",
     "@ember/optional-features": "^1.1.0",
-    "@glimmer/component": "^0.14.0-alpha.13",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-cli": "~3.14.0",
